--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -66,7 +66,8 @@
         <h1 style="text-align: center;">Bem-vindo ao Sistema de Avaliação PSQI</h1>
         <h2>O que é o PSQI?</h2>
         <p>
-            O Pittsburgh Sleep Quality Index (PSQI) é uma ferramenta de avaliação amplamente utilizada para medir a qualidade do sono e identificar distúrbios do sono. Desenvolvido por pesquisadores da Universidade de Pittsburgh, o PSQI avalia aspectos importantes relacionados ao sono, como a duração, a eficiência e a presença de dificuldades.
+            O Pittsburgh Sleep Quality Index (PSQI) é uma ferramenta de avaliação amplamente utilizada para medir a qualidade do sono e identificar distúrbios do sono. 
+            Desenvolvido por pesquisadores da Universidade de Pittsburgh, o PSQI avalia aspectos importantes relacionados ao sono, como a duração, a eficiência e a presença de dificuldades.
         </p>
 
         <h2>Benefícios do Teste PSQI</h2>
