--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -105,7 +105,7 @@
     </main>
     <footer style="font-size: 14px;">
         <p>innera</p>
-        <p>e-mail:<a href="mailto:"suporte@innerahealth.com.br></p>
+        <p>e-mail:<a href="mailto:"suporte@innerahealth.com.br>suporte@innerahealth.com.br</p>
         <p>telefone: <a href="tel:+5511911600808" style="text-decoration: none; color: white;">+55 11 91160-0808</a></p>
         <p>Copyright &copy; 2024 innera - Todos os direitos reservados.</p>
     </footer>
