--- a/psqi/templates/new_test.html
+++ b/psqi/templates/new_test.html
@@ -566,29 +566,29 @@
                                 </td>
                             {% else %}
                                 <td class="question">
-                                    <span class="bold-text">{{ field.label }}</span>
+                                    <span>{{ field.label }}</span>
                                 </td>
                                 <td class="answer">
                                     <label for="{{ field.id_for_label }}_0">
-                                        <span class="bold-text">0</span>
+                                        <span>0</span>
                                     </label>
                                     <input type="radio" name="{{ field.name }}" id="{{ field.id_for_label }}_0" value="0">
                                 </td>
                                 <td class="answer">
                                     <label for="{{ field.id_for_label }}_1">
-                                        <span class="bold-text">1</span>
+                                        <span>1</span>
                                     </label>
                                     <input type="radio" name="{{ field.name }}" id="{{ field.id_for_label }}_1" value="1">
                                 </td>
                                 <td class="answer">
                                     <label for="{{ field.id_for_label }}_2">
-                                        <span class="bold-text">2</span>
+                                        <span>2</span>
                                     </label>
                                     <input type="radio" name="{{ field.name }}" id="{{ field.id_for_label }}_2" value="2">
                                 </td>
                                 <td class="answer">
                                     <label for="{{ field.id_for_label }}_3">
-                                        <span class="bold-text">3</span>
+                                        <span>3</span>
                                     </label>
                                     <input type="radio" name="{{ field.name }}" id="{{ field.id_for_label }}_3" value="3">
                                 </td>
