--- a/psqi/templates/new_test.html
+++ b/psqi/templates/new_test.html
@@ -384,7 +384,7 @@
                                     {% elif forloop.counter == 6 %}
                                         <input type="text" id="{{ field.id_for_label }}" 
                                                name="{{ field.name }}" 
-                                               placeholder="Ex: 30" required> 
+                                               placeholder="Ex: 30 minutos" required> 
                                     {% elif forloop.counter == 7 %}
                                         <input type="time" id="{{ field.id_for_label }}" 
                                                name="{{ field.name }}" required>
