--- a/psqi/templates/test_list.html
+++ b/psqi/templates/test_list.html
@@ -15,7 +15,7 @@
     }
 
     .test-list {
-        width: 150px; 
+        width: 12%; 
         margin: 0;
         background-color: white;
         border-radius: 15px; 
