--- a/psqi/templates/test_detail.html
+++ b/psqi/templates/test_detail.html
@@ -142,8 +142,8 @@
                     <td style="padding: 8px;">{{ total_score }} pontos.</td>
                 </tr>
                 <tr>
-                    <td style="padding: 8px; vertical-align: top;"><strong>Avaliação:</strong></td>
-                    <td style="padding: 8px;">{{ score_evaluation }}</td>
+                    <td style="vertical-align: top;"><strong>Avaliação:</strong></td>
+                    <td>{{ score_evaluation|linebreaks }}</td>
                 </tr>
             </tbody>
         </table>
