Ajustes de projeto

--- a/psqi/templates/test_list.html
+++ b/psqi/templates/test_list.html
@@ -5,7 +5,7 @@
 {% load static %}  
 
 {% block extra_css %}
-    <link rel="stylesheet" type="text/css" href="{% static 'psqi/test_list.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/test_list.css' %}">
 {% endblock %}
 
 {% block content %}
